--- a/css/my_css.css
+++ b/css/my_css.css
@@ -11,23 +11,18 @@ p,h1,h2,h3,h4 {
 
  .topic {
 	padding-bottom: 9px;
-  margin: 50px 0 30px;
+  margin: 0px 0 30px;
   border-bottom: 1px solid #eeeeee;
 }
 
 .topic h2{
-  padding-top: 45px;
+  padding-top: 70px;
 }
 
 .page-header {
 	padding-bottom: 9px;
   margin: 70px 0 auto 30px;
   border-bottom: 1px solid #eeeeee;
-}
-
-.span6 h4 {
-  padding-top: 10px;
-  color: #498BA6;
 }
 
 .education p {
@@ -48,17 +43,6 @@ p,h1,h2,h3,h4 {
   list-style-type: none;
 }
 
-.process img {
-  padding-right: 10px;
-}
-
-.process {
-  padding-bottom: 50px;
-}
-
-.process p {
-  padding-left: 20px;
-}
 
 body {
   background: url('../img/noisy_net.png');
@@ -66,44 +50,33 @@ body {
 
 div.row {
   background-color: #ffffff;
-  padding-top: 10px;
-  padding-bottom: 15px;
-}
-
-.navbar-fixed-bottom {
-  background: url('../img/trees_dark2.png');
-  background-position: right bottom;
-  background-repeat: no-repeat;
-  padding-top: 450px;
-  padding-bottom: 50px;
-  box-shadow: none;
-  border: none;
+  padding-top: 40px;
+  padding-bottom: 25px;
 }
 
 .page-topic {
   position:relative;
   color:#fff;
   /*background:#498BA6*/
-  background: transparent url('../img/paper.png');
+  background: transparent url('../img/paper.png') no-repeat;
   font-size:1.5em;
   float:left;
   clear:both;
   padding:10px 10px 10px 20px;
   margin-left:-20px;
   margin-bottom:20px;
-  margin-top: 60px;
-  text-shadow:0 -1px #b9b9b9, 0 1px #fdfdfd;
-
-  -moz-box-shadow:2px 2px 0 rgba(0,0,0,0.1);
-  -webkit-box-shadow:2px 2px 0 rgba(0,0,0,0.1);
-  -o-box-shadow:2px 2px 0 rgba(0,0,0,0.1);
-  box-shadow:2px 2px 0 rgba(0,0,0,0.1);
+  margin-top: 103px;
 
   -moz-transform:rotate(-25deg); -moz-transform:skewx(25deg) translatex(150px);
   -webkit-transform:rotate(-25deg);
   -o-transform:rotate(-25deg);
   -ms-transform:rotate(-25deg);
   filter:progid:DXImageTransform.Microsoft.BasicImage(rotation=-0.25);
+}
+
+.page-topic img {
+  max-width: 150px;
+  max-height: 150px;
 }
 
 .page-topic:before{
@@ -124,64 +97,270 @@ footer p {
   padding-top:20px;
 }
 
-.hero-unit {
+#hero {
   background: #9ABBBF; /* for non-css3 browsers */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#9ABBBF'); /* for IE */
-  background: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#9ABBBF)); /* for webkit browsers */
+  background: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#9ebdc1)); /* for webkit browsers */
   background: -moz-linear-gradient(top,  #ccc,  #000); /* for firefox 3.6+ */
-  background-image: url('../img/hero2.png');
+  padding-top: 62px;
+  padding-bottom: 0px;
+  height: auto;
+  margin-bottom: 0px;
+  border-bottom: 1px solid #d1d2d4;
+  box-shadow: 0 1px 1px 0 #5e5e5e;
 }
 
-.page-head {
-  background-color: #403D3A;
+#hero img {
+  max-height: 250px;
+  max-width: 250px;
 }
 
-#skills-head {
-  background: #403D3A url('../img/banners/skills_banner.png');
-  background-position: right bottom;
-  background-repeat: no-repeat;
+#hero p {
+  text-shadow: 1px 1px #d4d4d4;
 }
 
-#about-head {
-  background: #403D3A url('../img/banners/about_banner.png');
-  background-position: right bottom;
-  background-repeat: no-repeat;
+
+#profile {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-image: url('../img/retro_intro.png');
+}
+
+#personal_information {
+  padding-top: 30px;
+  padding-bottom: 5px;
+  background-image: url('../img/billie_holiday.png');
+}
+.brand img {
+  max-width: 45px;
+  max-height: 45px;
+}
+
+.icon {
+  max-width: 250px;
+  max-height: 250px;
+}
+
+.triangle-isosceles.left {
+  margin-left: 50px;
+  background: #7d8e91;
+}
+
+.triangle-isosceles {
+  position: relative;
+  padding: 15px;
+  margin: 1em 0 3em;
+  color: #000;
+  background: #7d8e91;
+  background: -webkit-gradient(linear, 0 0, 0 100%, from(#f9d835), to(#f3961c));
+  background: -moz-linear-gradient(#f9d835, #f3961c);
+  background: -o-linear-gradient(#f9d835, #f3961c);
+  background: linear-gradient(#f9d835, #f3961c);
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  box-shadow: 0 1px 1px 0 #5e5e5e;
+}
+
+.triangle-isosceles.left::after {
+  top: 16px;
+  left: -50px;
+  bottom: auto;
+  border-width: 10px 50px 10px 0;
+  border-color: transparent #7d8e91;
+}
+
+.triangle-isosceles::after {
+  content: "";
+  position: absolute;
+  bottom: -15px;
+  left: 50px;
+  border-width: 15px 15px 0;
+  border-style: solid;
+  border-color: #7d8e91 transparent;
+  display: block;
+  width: 0;
+}
+
+#welcome {
+  padding-top: 25px;
+  padding-bottom: 25px;
+  background-image: url('../img/retro_intro.png');
+}
+
+#site-features, #skillset1, #skillset2, #skillset3 {
+  padding-top: 20px;
+  padding-bottom: 50px;
+  background-image: url('../img/billie_holiday.png');
+}
+
+#process_set1, #process_set2, #process_set3 {
+  padding-top: 5px;
+  padding-bottom: 50px;
+  background-image: url('../img/billie_holiday.png');
+}
+
+#site-features p {
+  padding-top: 5px;
+  padding-bottom: 30px;
 }
 
 #projects-head {
   background: #403D3A url('../img/banners/projects_banner.png');
   background-position: right bottom;
   background-repeat: no-repeat;
+  margin-top: -74px;
 }
 
-#process-head {
-  background: #403D3A url('../img/banners/process_banner.png');
+#websites_section, #twoD_section, #animation_section {
+  padding-bottom: 50px;
+  background-image: url('../img/retro_intro.png');
+}
+
+#websites_section {
+  margin-top: -1px;
+}
+
+#interactive_section, #threeD_section, #group_section {
+  padding-bottom: 50px;
+  background-image: url('../img/billie_holiday.png');
+}
+
+#about-head {
+  background: #403D3A url('../img/banners/about_banner.png');
   background-position: right bottom;
   background-repeat: no-repeat;
+  margin-top: -64px;
 }
 
-.img-rounded {
-  padding-left: 20px;
+#skills-head {
+  background: #403D3A url('../img/banners/skills_banner.png');
+  background-position: right bottom;
+  background-repeat: no-repeat;
+  margin-top: -64px;
+}
+
+#skills-head h1, #about-head h1, #projects-head h1, #process-head h1 {
+  padding-top: 160px;
+  color: #ffffff;
+  font-size: 32pt;
+  text-shadow: 1px 1px #000;
 }
 
 .skills ul {
   list-style-type: none;
 }
 
+#process-head {
+  background: #403D3A url('../img/banners/process_banner.png');
+  background-position: right bottom;
+  background-repeat: no-repeat;
+  margin-top: -81px;
+}
+
+.process img {
+  padding-left: 5px;
+}
+
+.process {
+  padding-bottom: 20px;
+}
+
+.process p {
+  padding-left: -20px;
+}
+.img-rounded {
+  padding-left: 20px;
+}
+
+#side_menu ul{
+  margin-top: 50px;
+  background: rgb(255, 255, 255);
+  background: rgba(255, 255, 255, 0.6);
+  border-style: solid;
+  border-color: #5e5e5e;
+  border-width: 1px;
+  box-shadow: 0 1px 1px 0 #403D3A;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+#logo {
+  max-width: 45px;
+  max-height: 45px;
+}
+
+/*============================================================================================================
+Tablets*/
+
+
 @media handheld, only screen and (max-width: 767px) {
-  .bs-docs-sidenav {
+  #side_menu {
     display: none;
   }
 
   .video-clips iframe {
-    width: 300px;
-    height: 181px;
+    width: 320px;
+    height: 180px;
+    padding-left: 50px;
+  }
+
+  .page-topic {
+    display: none;
+  }
+
+  #about-head, #skills-head, #projects-head, #process-head {
+    margin-top: 20px;
+    max-height: 150px;
+    background: #403D3A;
+  }
+
+  #skills-head h1, #about-head h1, #projects-head h1, #process-head h1 {
+    padding-top: 10px;
+  }
+
+  #skills-head h1, #about-head h1, #projects-head h1, #process-head h1 {
+    padding-top: 10px;
+    color: #ffffff;
+    font-size: 24pt;
+    text-shadow: 1px 1px #000;
+  }
+
+  .topic h2{
+    font-size: 20pt;
+    padding-top: 10px;
+  }
+
+  .caption h3{
+    font-size: 12pt;
   }
 }
 
+
+/*============================================================================================================
+Mobile phones*/
+
+
 @media handheld, only screen and (max-width: 320px)  {
+  #side_menu {
+    display: none;
+  }
+
   .video-clips iframe {
-    width: 200px;
-    height: 181px;
+    max-width: 160px;
+    max-height: 90px;
+    padding-left: 10px;
+  }
+
+  .page-topic {
+    display: none;
+  }
+
+  .icon p {
+    display: none;
+  }
+
+  #hero img {
+    display: none;
   }
 }
