--- a/css/main.css
+++ b/css/main.css
@@ -682,6 +682,7 @@ header .logo .brand {
   -moz-transition: all .33s ease;
   -o-transition: all .33s ease;
   transition: all .33s ease;
+  transform: translateY(10%);
   height: 120px;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
@@ -692,12 +693,12 @@ header .logo .brand {
     display: none;
   }
 }
-/* line 91, ../sass/layout/_header.scss */
+/* line 92, ../sass/layout/_header.scss */
 .primary-nav ul.active li {
   margin-left: -2.5em;
   margin-bottom: 0.2em;
 }
-/* line 95, ../sass/layout/_header.scss */
+/* line 96, ../sass/layout/_header.scss */
 .primary-nav ul.active .current-item {
   font-weight: bold;
   background-color: #d8d8d8;
@@ -705,11 +706,11 @@ header .logo .brand {
   -webkit-border-radius: 0.5em;
   border-radius: 0.5em;
 }
-/* line 99, ../sass/layout/_header.scss */
+/* line 100, ../sass/layout/_header.scss */
 .primary-nav ul.active .current-item a {
   color: #3f3f3f;
 }
-/* line 103, ../sass/layout/_header.scss */
+/* line 104, ../sass/layout/_header.scss */
 .primary-nav ul.active a {
   text-decoration: none;
   transition: color linear 0.15s;
@@ -717,11 +718,11 @@ header .logo .brand {
   padding: 1em;
   display: block;
 }
-/* line 110, ../sass/layout/_header.scss */
+/* line 111, ../sass/layout/_header.scss */
 .primary-nav ul.active a:focus {
   outline: 1px solid #ffffff;
 }
-/* line 114, ../sass/layout/_header.scss */
+/* line 115, ../sass/layout/_header.scss */
 .primary-nav ul.toggle-nav {
   -moz-transition: all .33s ease;
   -o-transition: all .33s ease;
@@ -732,7 +733,7 @@ header .logo .brand {
   margin-top: -0.5em;
 }
 @media screen and (min-width: 40.063em) {
-  /* line 114, ../sass/layout/_header.scss */
+  /* line 115, ../sass/layout/_header.scss */
   .primary-nav ul.toggle-nav {
     display: block;
     float: right;
@@ -744,29 +745,29 @@ header .logo .brand {
   }
 }
 @media screen and (min-width: 40.063em) {
-  /* line 130, ../sass/layout/_header.scss */
+  /* line 131, ../sass/layout/_header.scss */
   .primary-nav ul.toggle-nav li {
     float: left;
     margin-left: 1em;
   }
 }
-/* line 135, ../sass/layout/_header.scss */
+/* line 136, ../sass/layout/_header.scss */
 .primary-nav ul.toggle-nav li a {
   color: #ffffff;
 }
-/* line 138, ../sass/layout/_header.scss */
+/* line 139, ../sass/layout/_header.scss */
 .primary-nav ul.toggle-nav li a:hover {
   color: #e78592;
   text-decoration: underline;
 }
-/* line 143, ../sass/layout/_header.scss */
+/* line 144, ../sass/layout/_header.scss */
 .primary-nav ul.toggle-nav .current-item {
   background-color: #d8d8d8;
   -moz-border-radius: 0.5em;
   -webkit-border-radius: 0.5em;
   border-radius: 0.5em;
 }
-/* line 147, ../sass/layout/_header.scss */
+/* line 148, ../sass/layout/_header.scss */
 .primary-nav ul.toggle-nav .current-item a,
 .primary-nav ul.toggle-nav .current-item a:hover,
 .primary-nav ul.toggle-nav .current-item a:focus {
