--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -82,6 +82,7 @@ header {
 		-moz-transition: all .33s ease;
 	    -o-transition: all .33s ease;
 	    transition: all .33s ease;
+	    transform: translateY(10%);
 	    height: 120px;
 	    @include opacity(1);
 
