--- a/css/main.css
+++ b/css/main.css
@@ -698,20 +698,22 @@ header .logo .brand {
 .primary-nav ul.active li {
   margin-left: -2.5em;
   margin-bottom: 0.5em;
+  border-bottom: 1px solid #d8d8d8;
 }
-/* line 97, ../sass/layout/_header.scss */
+/* line 98, ../sass/layout/_header.scss */
 .primary-nav ul.active .current-item {
   font-weight: bold;
-  background-color: #d8d8d8;
-  -moz-border-radius: 0.5em;
-  -webkit-border-radius: 0.5em;
-  border-radius: 0.5em;
+  /*background-color: $grey;
+  @include border-radius(0.5em);
+  a {
+  	color: $blackTint25;
+  }*/
 }
-/* line 101, ../sass/layout/_header.scss */
+/* line 100, ../sass/layout/_header.scss */
 .primary-nav ul.active .current-item a {
-  color: #3f3f3f;
+  color: #e05d6e;
 }
-/* line 105, ../sass/layout/_header.scss */
+/* line 109, ../sass/layout/_header.scss */
 .primary-nav ul.active a {
   text-decoration: none;
   transition: color linear 0.15s;
@@ -719,11 +721,11 @@ header .logo .brand {
   padding: 1em;
   display: block;
 }
-/* line 112, ../sass/layout/_header.scss */
+/* line 116, ../sass/layout/_header.scss */
 .primary-nav ul.active a:focus {
   outline: 1px solid #ffffff;
 }
-/* line 116, ../sass/layout/_header.scss */
+/* line 120, ../sass/layout/_header.scss */
 .primary-nav ul.toggle-nav {
   -moz-transition: all .33s ease;
   -o-transition: all .33s ease;
@@ -735,7 +737,7 @@ header .logo .brand {
   margin-top: -0.2em;
 }
 @media screen and (min-width: 40.063em) {
-  /* line 116, ../sass/layout/_header.scss */
+  /* line 120, ../sass/layout/_header.scss */
   .primary-nav ul.toggle-nav {
     display: block;
     float: right;
@@ -747,29 +749,32 @@ header .logo .brand {
   }
 }
 @media screen and (min-width: 40.063em) {
-  /* line 133, ../sass/layout/_header.scss */
+  /* line 137, ../sass/layout/_header.scss */
   .primary-nav ul.toggle-nav li {
     float: left;
     margin-left: 1em;
+    border: 0;
   }
 }
-/* line 138, ../sass/layout/_header.scss */
+/* line 143, ../sass/layout/_header.scss */
 .primary-nav ul.toggle-nav li a {
   color: #ffffff;
 }
-/* line 141, ../sass/layout/_header.scss */
+/* line 146, ../sass/layout/_header.scss */
 .primary-nav ul.toggle-nav li a:hover {
   color: #e78592;
   text-decoration: underline;
 }
-/* line 146, ../sass/layout/_header.scss */
-.primary-nav ul.toggle-nav .current-item {
-  background-color: #d8d8d8;
-  -moz-border-radius: 0.5em;
-  -webkit-border-radius: 0.5em;
-  border-radius: 0.5em;
+@media screen and (min-width: 40.063em) {
+  /* line 151, ../sass/layout/_header.scss */
+  .primary-nav ul.toggle-nav .current-item {
+    background-color: #d8d8d8;
+    -moz-border-radius: 0.5em;
+    -webkit-border-radius: 0.5em;
+    border-radius: 0.5em;
+  }
 }
-/* line 150, ../sass/layout/_header.scss */
+/* line 156, ../sass/layout/_header.scss */
 .primary-nav ul.toggle-nav .current-item a,
 .primary-nav ul.toggle-nav .current-item a:hover,
 .primary-nav ul.toggle-nav .current-item a:focus {
