--- a/css/main.css
+++ b/css/main.css
@@ -703,7 +703,7 @@ header .logo .brand {
 /* line 99, ../sass/layout/_header.scss */
 .primary-nav ul.active .current-item a {
   font-weight: bold;
-  color: #e05d6e;
+  color: #e78592;
 }
 /* line 104, ../sass/layout/_header.scss */
 .primary-nav ul.active a {
