--- a/sass/helpers/_grid.scss
+++ b/sass/helpers/_grid.scss
@@ -1,6 +1,7 @@
-/*===================================================================================================
-Susy
-=====================================================================================================*/
+/* Grid
+=====================================================================================================
+*/
+
 $susy: (
 	columns: 12,
 	global-box-sizing: border-box,
