--- a/sass/helpers/_breakpoints.scss
+++ b/sass/helpers/_breakpoints.scss
@@ -1,26 +1,15 @@
-/*Table of contents
-1. Breakpoints
-    1.1 Small screens
-    1.2 Medium screens
-    1.3 Large screens
-    1.4 XLarge screens
+/* Breakpoints
 =====================================================================================================
 */
 
-/*1. Breakpoints
-=====================================================================================================*/
-/*1.1 Small screens
-------------------------*/
+/* ------ Small screens ------ */
 $break-sm: "min-width: 25em";
 
-/*1.2 Medium screens
-------------------------*/
+/* ------ Medium screens ------ */
 $break-md: "min-width: 40.063em";
 
-/*1.3 Large screens
-------------------------*/
+/* ------ Large screens ------ */
 $break-lg: "min-width: 64.063em";
 
-/*1.4 XLarge screens
-------------------------*/
+/* ------ Extra large screens ------ */
 $break-xlg: "min-width: 90.063em";
