--- a/sass/helpers/_utility.scss
+++ b/sass/helpers/_utility.scss
@@ -1,10 +1,9 @@
-/*Table of contents
-1. Screen-reader only classes
+/*
+Utility classes
 =====================================================================================================
 */
 
-/*1. Screen-reader only classes
-=====================================================================================================*/
+/* ------ Screen-reader content ------ */
 .sr-only {
 	position: absolute;
     width: 1px;
@@ -15,3 +14,25 @@
     clip: rect(0, 0, 0, 0);
     border: 0;
 }
+
+/* ------ Notifications ------ */
+#message {
+	background: #333;
+	color: #fff;
+	text-align: center;
+}
+#message .hide:hover,
+#message .hide:focus, {
+	color: $white;
+}
+.slideup, .slidedown {
+    max-height: 0;            
+    overflow-y: hidden;
+    -webkit-transition: max-height 1s ease-in-out;
+    -moz-transition: max-height 1s ease-in-out;
+    -o-transition: max-height 1s ease-in-out;
+    transition: max-height 1s ease-in-out;
+}
+.slidedown {            
+    max-height: 80px;                    
+}    
