--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -330,53 +330,56 @@ footer .about__photo {
   float: left;
   margin-right: 1.40845%;
   padding: 0 1em 2em;
-  animation-duration: 2s;
-  animation-name: bounceIn;
-  transition: all .33s ease;
 }
-/* line 153, ../sass/layout/_grid.scss */
+/* line 150, ../sass/layout/_grid.scss */
 footer .about__photo img {
   width: 100%;
   height: auto;
   border-radius: 50%;
   border: 0.2em solid #e3e5da;
 }
-/* line 160, ../sass/layout/_grid.scss */
+/* line 157, ../sass/layout/_grid.scss */
+footer .bounce__in {
+  animation-duration: 2s;
+  animation-name: bounceIn;
+  transition: all .33s ease;
+}
+/* line 162, ../sass/layout/_grid.scss */
 footer .about__text {
   width: 74.64789%;
   float: right;
   margin-right: 0;
   padding-bottom: 2em;
 }
-/* line 164, ../sass/layout/_grid.scss */
+/* line 166, ../sass/layout/_grid.scss */
 footer a {
   color: #e88894;
 }
-/* line 167, ../sass/layout/_grid.scss */
+/* line 169, ../sass/layout/_grid.scss */
 footer a:hover {
   color: #e3e5da;
 }
-/* line 170, ../sass/layout/_grid.scss */
+/* line 172, ../sass/layout/_grid.scss */
 footer a:focus {
   outline: 1px solid #e3e5da;
 }
-/* line 173, ../sass/layout/_grid.scss */
+/* line 175, ../sass/layout/_grid.scss */
 footer .footer__end {
   clear: both;
   border-top: 1px solid #e3e5da;
 }
-/* line 177, ../sass/layout/_grid.scss */
+/* line 179, ../sass/layout/_grid.scss */
 footer .footer__caption {
   padding: 1em 0;
   color: #f2f2f2;
   margin-bottom: 0;
 }
-/* line 182, ../sass/layout/_grid.scss */
+/* line 184, ../sass/layout/_grid.scss */
 footer .social__media {
   padding: 1em 0;
   margin-bottom: 0;
 }
-/* line 186, ../sass/layout/_grid.scss */
+/* line 188, ../sass/layout/_grid.scss */
 footer .social__media li {
   display: inline;
   padding-left: .2em;
@@ -384,13 +387,13 @@ footer .social__media li {
 
 /* First breakpoint */
 @media (min-width: 420px) {
-  /* line 194, ../sass/layout/_grid.scss */
+  /* line 196, ../sass/layout/_grid.scss */
   ul.gallery__list {
     padding-top: 1.5em;
     padding-bottom: 1.5em;
   }
 
-  /* line 198, ../sass/layout/_grid.scss */
+  /* line 200, ../sass/layout/_grid.scss */
   ul.gallery__list li {
     width: 49.29577%;
     float: left;
@@ -409,25 +412,25 @@ footer .social__media li {
     clear: none;
   }
 
-  /* line 201, ../sass/layout/_grid.scss */
+  /* line 203, ../sass/layout/_grid.scss */
   footer .footer__caption {
     float: left;
   }
 
-  /* line 204, ../sass/layout/_grid.scss */
+  /* line 206, ../sass/layout/_grid.scss */
   footer .social__media {
     float: right;
   }
 }
 /* Second breakpoint */
 @media (min-width: 720px) {
-  /* line 211, ../sass/layout/_grid.scss */
+  /* line 213, ../sass/layout/_grid.scss */
   ul.gallery__list {
     padding-top: 1.5em;
     padding-bottom: 1.5em;
   }
 
-  /* line 215, ../sass/layout/_grid.scss */
+  /* line 217, ../sass/layout/_grid.scss */
   ul.gallery__list li {
     height: auto;
     width: 49.29577%;
@@ -450,7 +453,7 @@ footer .social__media li {
     clear: none;
   }
 
-  /* line 222, ../sass/layout/_grid.scss */
+  /* line 224, ../sass/layout/_grid.scss */
   article {
     width: 66.19718%;
     float: left;
@@ -459,7 +462,7 @@ footer .social__media li {
     margin-top: 1em;
   }
 
-  /* line 227, ../sass/layout/_grid.scss */
+  /* line 229, ../sass/layout/_grid.scss */
   aside {
     width: 32.39437%;
     float: right;
@@ -473,7 +476,7 @@ footer .social__media li {
 }
 /* 16-column layout  – activated at large breakpoint */
 @media (min-width: 1100px) {
-  /* line 240, ../sass/layout/_grid.scss */
+  /* line 242, ../sass/layout/_grid.scss */
   header {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -483,7 +486,7 @@ footer .social__media li {
     padding-top: 5em;
   }
 
-  /* line 244, ../sass/layout/_grid.scss */
+  /* line 246, ../sass/layout/_grid.scss */
   main {
     border-top: 4px solid #505050;
     border-left: 4px solid #505050;
@@ -495,17 +498,17 @@ footer .social__media li {
     margin-right: 0;
   }
 
-  /* line 249, ../sass/layout/_grid.scss */
+  /* line 251, ../sass/layout/_grid.scss */
   main.project {
     padding-bottom: 9em;
   }
 
-  /* line 252, ../sass/layout/_grid.scss */
+  /* line 254, ../sass/layout/_grid.scss */
   ul.gallery__list {
     padding: 0;
   }
 
-  /* line 255, ../sass/layout/_grid.scss */
+  /* line 257, ../sass/layout/_grid.scss */
   ul.gallery__list li {
     width: 100%;
     height: 288.938px;
@@ -534,18 +537,18 @@ footer .social__media li {
     clear: none;
   }
 
-  /* line 265, ../sass/layout/_grid.scss */
+  /* line 267, ../sass/layout/_grid.scss */
   ul.gallery__list li img {
     box-shadow: 0px 0px 0px 8px rgba(0, 0, 0, 0.3);
   }
 
-  /* line 271, ../sass/layout/_grid.scss */
+  /* line 273, ../sass/layout/_grid.scss */
   footer {
     padding-top: 4.5em;
     padding-left: 0;
     padding-right: 0;
   }
-  /* line 275, ../sass/layout/_grid.scss */
+  /* line 277, ../sass/layout/_grid.scss */
   footer .about__text {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -554,7 +557,7 @@ footer .social__media li {
     float: left;
     padding-top: 3em;
   }
-  /* line 279, ../sass/layout/_grid.scss */
+  /* line 281, ../sass/layout/_grid.scss */
   footer .about__photo {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -564,27 +567,27 @@ footer .social__media li {
     margin-left: 25%;
     padding: 0 1.5em 2em;
   }
-  /* line 283, ../sass/layout/_grid.scss */
+  /* line 285, ../sass/layout/_grid.scss */
   footer .about__photo img {
     border: 0.5em solid #e3e5da;
   }
-  /* line 287, ../sass/layout/_grid.scss */
+  /* line 289, ../sass/layout/_grid.scss */
   footer .footer__end {
     background-color: #333;
     border: 0;
     padding: 0 0 4em;
   }
-  /* line 292, ../sass/layout/_grid.scss */
+  /* line 294, ../sass/layout/_grid.scss */
   footer .footer__caption {
     padding-left: 2.5em;
   }
-  /* line 295, ../sass/layout/_grid.scss */
+  /* line 297, ../sass/layout/_grid.scss */
   footer .social__media {
     padding-right: 2.5em;
   }
 }
 @media (min-width: 1450px) {
-  /* line 301, ../sass/layout/_grid.scss */
+  /* line 303, ../sass/layout/_grid.scss */
   ul.projects.gallery__list li {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -612,7 +615,7 @@ footer .social__media li {
     clear: none;
   }
 
-  /* line 304, ../sass/layout/_grid.scss */
+  /* line 306, ../sass/layout/_grid.scss */
   ul.gallery__list li {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -646,7 +649,7 @@ footer .social__media li {
     clear: none;
   }
 
-  /* line 307, ../sass/layout/_grid.scss */
+  /* line 309, ../sass/layout/_grid.scss */
   main.project {
     padding-bottom: 5em;
   }
